# mcp-brasil

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Makefile  README.md  TECH_DEBT.md  pyproject.toml
.github/: SETUP.md
.github/workflows/: azure-refresh-datasets.yml  deploy.yml  sync-upstream.yml
docs/deploy/: azure-datasets.md  foundry-teams.md
src/mcp_brasil/_shared/: cache.py
src/mcp_brasil/bacen/: __init__.py  catalog.py  constants.py
src/mcp_brasil/data/anvisa/: client.py  server.py  tools.py
src/mcp_brasil/data/compras/contratosgovbr/: __init__.py  client.py  constants.py  schemas.py  server.py  tools.py
src/mcp_brasil/data/opendatasus/: constants.py  server.py  tools.py
src/mcp_brasil/datasets/anac_rab/: tools.py
src/mcp_brasil/datasets/anp_precos/: __init__.py  constants.py  prompts.py  resources.py  server.py  tools.py
src/mcp_brasil/datasets/inep_censo_escolar/: __init__.py  constants.py  prompts.py  resources.py  server.py  tools.py
src/mcp_brasil/ibge/: client.py  constants.py  schemas.py  server.py  tools.py
src/mcp_brasil/senado/: client.py
tests/_shared/: test_batch.py  test_cache.py  test_feature.py
tests/data/anvisa/: test_client.py  test_integration.py  test_tools.py
tests/data/opendatasus/: test_integration.py  test_tools.py
tests/datasets/anp_precos/: test_integration.py
tests/datasets/inep_censo_escolar/: test_integration.py
